--- a/index.ipynb
+++ b/index.ipynb
@@ -15,10 +15,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import paho.mqtt.client as mqtt\n",
     "import ipywidgets as widgets\n",
     "\n",
+    "# MQTT constants\n",
+    "CLIENT_NAME = \"Binder Simulation Test\"\n",
+    "BROKER_IP = \"34.255.161.78\"\n",
+    "BROKER_PORT = \"1885\"\n",
+    "BASE_TOPIC = \"binder-sim-test\"\n",
+    "\n",
     "w = widgets.FloatSlider(\n",
-    "    value=,\n",
+    "    value=100,\n",
     "    min=3,\n",
     "    max=2400,\n",
     "    step=0.1,\n",
