added mqtt publishing

--- a/index.ipynb
+++ b/index.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import paho.mqtt.client as mqtt\n",
+    "import paho.mqtt.publish as mqtt_publish\n",
     "import ipywidgets as widgets\n",
     "\n",
     "# MQTT constants\n",
@@ -45,7 +45,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w.value"
+    "w.value\n",
+    "\n",
+    "topic = BASE_TOPIC + '/slider-value'\n",
+    "payload = w.value\n",
+    "\n",
+    "# send single message to mqtt broker\n",
+    "mqtt_publish.single(topic, payload=payload, qos=0, retain=False, hostname=BROKER_IP,\n",
+    "    port=BROKER_PORT, client_id=CLIENT_NAME, keepalive=60, will=None, auth=None, tls=None,\n",
+    "    protocol=mqtt.MQTTv311, transport=\"tcp\")"
    ]
   }
  ],
