widgets need to be threaded to get lopped values from them

--- a/index.ipynb
+++ b/index.ipynb
@@ -21,7 +21,7 @@
     "# MQTT constants\n",
     "CLIENT_NAME = \"Binder Simulation Test\"\n",
     "BROKER_IP = \"34.255.161.78\"\n",
-    "BROKER_PORT = \"1885\"\n",
+    "BROKER_PORT = 1885\n",
     "BASE_TOPIC = \"binder-sim-test\"\n",
     "\n",
     "w = widgets.FloatSlider(\n",
@@ -35,8 +35,7 @@
     "    orientation='horizontal',\n",
     "    readout=True,\n",
     "    readout_format='.1f',\n",
-    ")\n",
-    "display(w)"
+    ")\n"
    ]
   },
   {
@@ -45,15 +44,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w.value\n",
+    "import threading\n",
+    "# from IPython.display import display\n",
+    "# import ipywidgets as widgets\n",
     "\n",
-    "topic = BASE_TOPIC + '/slider-value'\n",
-    "payload = w.value\n",
     "\n",
-    "# send single message to mqtt broker\n",
-    "mqtt_publish.single(topic, payload=payload, qos=0, retain=False, hostname=BROKER_IP,\n",
-    "    port=BROKER_PORT, client_id=CLIENT_NAME, keepalive=60, will=None, auth=None, tls=None,\n",
-    "    protocol=mqtt.MQTTv311, transport=\"tcp\")"
+    "def work(w):\n",
+    "    count = 0\n",
+    "    topic = BASE_TOPIC + '/slider-value'\n",
+    "    for ii in range(10):\n",
+    "        time.sleep(5)\n",
+    "        payload = w.value\n",
+    "        print(payload, count, end='\\r')\n",
+    "        count += 1\n",
+    "        # send single message to mqtt broker\n",
+    "        mqtt_publish.single(topic, payload=payload, hostname=BROKER_IP,\n",
+    "                port=BROKER_PORT, client_id=CLIENT_NAME)\n",
+    "\n",
+    "thread = threading.Thread(target=work, args=(w,))\n",
+    "display(w)\n",
+    "thread.start()\n"
    ]
   }
  ],
